FairyTalePage displaying problem fixed by parallaxprovider wrap in the main.jsx

--- a/Frontend-CourseProject/src/components/Navigation.css
+++ b/Frontend-CourseProject/src/components/Navigation.css
@@ -4,7 +4,6 @@ body {
     padding: 0;
 }
 
-
 .navigation {
     background-color: #161616;
     color: white;
@@ -15,6 +14,11 @@ body {
     margin: 0 !important;
     box-sizing: border-box;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.661);
+    transition: transform 0.3s ease-in-out;
+}
+
+.navigation.hidden {
+    transform: translateY(-100%);
 }
 
 .logo img {
